--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "react-router-dom": "5.3.0",
     "tailwindcss": "1.9.6"
   },
   "version": "0.1.0",
