--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,12 @@ cypress-tests/cypress/videos/
 
 # Ignore redis dump file
 dump.rdb
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+package-lock.json
